@@ -103,8 +103,10 @@
 
     "advancements.stone_age.root.title": "Stone age",
     "advancements.stone_age.root.description": "Welcome to stone age",
-    "advancements.stone_age.flint_and_stick.title": "Flint and stick",
+    "advancements.stone_age.flint_and_stick.title": "Flint and Stick",
     "advancements.stone_age.flint_and_stick.description": "Made your first tool.",
-    "advancements.stone_age.flint_workbench.title": "Flint workbench",
-    "advancements.stone_age.flint_workbench.description": "Workbench like no other. Craft by right-click with flint knife."
+    "advancements.stone_age.flint_workbench.title": "Flint Workbench",
+    "advancements.stone_age.flint_workbench.description": "Workbench like no other. Craft by right-click with flint knife.",
+    "advancements.stone_age.end_of_stone_age.title": "End of Stone Age",
+    "advancements.stone_age.end_of_stone_age.description": "Stone age ends here, just craft Crafting Table and you can use it."
 }
