@@ -1,3 +1,4 @@
+- gated usage of vanilla crafting table after finishing stone age
 - replaced vanilla stone tools with improved stone tools
 - fixed crash when running server-side only
 - fixed interaction with another mods
